# pixel-snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
qml/: main.qml
src/: GameController.cpp  GameController.h  main.cpp
